<resources>
    <string name="app_name">Computador</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">CREAR COMPUTADOR</string>
    <string name="marca">MARCA</string>
    <string name="ram">RAM</string>
    <string name="color">COLOR</string>
    <string name="tipo">TIPO</string>
    <string name="sistema">SISTEMA OPERATIVO</string>
    <string name="guardar">GUARDAR</string>
    <string name="borrar">LIMPIAR</string>
    <string name="hp">HP</string>
    <string name="acer">ACER</string>
    <string name="mac">MAC</string>
    <string name="lenovo">LENOVO</string>
    <string name="negro">NEGRO</string>
    <string name="blanco">BLANCO</string>
    <string name="azul">AZUL</string>
    <string name="rojo">ROJO</string>
    <string name="escritorio">ESCRITORIO</string>
    <string name="portatil">PORTATIL</string>
    <string name="windows">PORTATIL</string>
    <string name="linux">LINUX</string>
    <string name="solaris">SOLARIS</string>
    <string name="macos">MACOS</string>
    <string name="guardado">GUARDADO EXITOSAMENTE!!!</string>
    <string-array name="lst_marca">
        <item>@string/hp</item>
        <item>@string/acer</item>
        <item>@string/mac</item>
        <item>@string/lenovo</item>
    </string-array>
    <string-array name="lst_color">
        <item>@string/negro</item>
        <item>@string/blanco</item>
        <item>@string/azul</item>
        <item>@string/rojo</item>
    </string-array>
    <string-array name="lst_tipo">
        <item>@string/escritorio</item>
        <item>@string/portatil</item>
    </string-array>
    <string-array name="lst_sitema">
        <item>@string/windows</item>
        <item>@string/linux</item>
        <item>@string/solaris</item>
        <item>@string/macos</item>
    </string-array>
</resources>
